--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# Server-side only - set this in Vercel environment variables
+GEMINI_API_KEY=your_gemini_api_key_here
