--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,9 @@
   "framework": "vite",
   "buildCommand": "vite build",
   "outputDirectory": "dist",
-  "routes": [
-    {
-      "src": "/[^.]+",
-      "dest": "/",
-      "status": 200
+  "functions": {
+    "api/chat.ts": {
+      "maxDuration": 10
     }
-  ]
+  }
 } 
